# Ros2-Autonomous-Navigtion-and-Perception-Project

./: README.md
task1_ws/src/: controltemp.xacro  launchbacckup.py  tempooooo.urdf
task1_ws/src/camp/: CMakeLists.txt  package.xml
task1_ws/src/camp/config/: amcl_config.yaml  controller.yaml  husky_visualization.rviz  mapper_params_online_async.yaml
task1_ws/src/camp/env-hooks/: camp.dsv.in
task1_ws/src/camp/launch/: arucolaunch.py  gazebo.launch.py  maze_navigation.launch.py  mylaunch.py  nav2_bringup_launch.py  nav2_bringup_launch_aruco.py  slam_launch.py  visualize.launch.py
task1_ws/src/camp/map/: arucoMap.pgm  arucoMap.yaml  map.pgm  map.yaml
task1_ws/src/camp/models/cardboard_box/: model.sdf
task1_ws/src/camp/models/husky_robot_model/: model.sdf  model.urdf
task1_ws/src/camp/scripts/: aruco_navigation.py  dynamic_carrot_broadcaster.py  simple_joint_state_publisher.py  waypoint_navigator.py
task1_ws/src/camp/worlds/: marker.world  maze.sdf  sample_world.sdf  sample_world.world  task2.world
task1_ws/src/log/: latest_list
task1_ws/src/nav2_pkg/nav2_pkg/: CMakeLists.txt  package.xml
task1_ws/src/nav2_pkg/nav2_pkg/config/: ekf.yaml  mapper_params_online_async.yaml
task1_ws/src/nav2_pkg/nav2_pkg/launch/: nav2_launch.py
task1_ws/src/nav2_pkg/nav2_pkg/params/: nav2_params.yaml
