<?xml version="1.0"?>
<package format="3">
  <name>camp</name>
  <version>0.0.0</version>
  <description>The camp package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="sandeepan@todo.todo">sandeepan</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Apache-2.0</license>

  <!-- ROS 2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build and runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>nav2_simple_commander</depend>
  
  <!-- Runtime-only dependencies -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
